atualizando flex wrap

--- a/flex-conteiner/flex-direction/index.html
+++ b/flex-conteiner/flex-direction/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>flexbox</title>
+    <title>flexbox - flex-direction</title>
 </head>
 <body>
     <div id="row">
