--- a/flex-conteiner/gap/index.html
+++ b/flex-conteiner/gap/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flexbox - flex-wrap</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Flexbox - gap</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>wrap</h1>
-    <div class="containe">
+    <h1>gap</h1>
+    <div id="container">
         <div class="item">1</div>
         <div class="item">2</div>
         <div class="item">3</div>
